--- a/index.html
+++ b/index.html
@@ -9,26 +9,39 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/trivia.css">
 </head>
 <body>
     <header></header>
     <div class="container">
         <div class="row">
-            <div class="col-md-3"></div>
-            <div id="timer" class="col-xs-12 col-sm-12 col-md-6"></div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
+            <div id="timer" class="col-xs-12 col-sm-12 col-md-8"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row">
-            <div class="col-md-3"></div>
-            <div id="start" class="col-xs-12 col-sm-12 col-md-6">
+            <div class="col-md-2"></div>
+            <div id="start" class="col-xs-12 col-sm-12 col-md-8">
                 <button id="start_btn" class="btn btn-primary">Start Trivia Game</button>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-xs-12 col-sm-12 col-md-6 ques-space"></div>
-            <div class="col-md-3"></div>
+            <!-- <form> -->
+                <div class="col-md-2"></div>
+                <form>
+                <div class="col-xs-12 col-sm-12 col-md-8 ques-space"></div>
+                </form>
+                <div class="col-md-2"></div>
+            <!-- </form> -->
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8">
+                <button id="submit" class="btn btn-primary">Submit</button>
+            </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
     <footer></footer>
