--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="row">
             <!-- <form> -->
                 <div class="col-md-2"></div>
-                <form>
-                <div class="col-xs-12 col-sm-12 col-md-8 ques-space"></div>
-                </form>
+                <div class="col-xs-12 col-sm-12 col-md-8">
+                    <form class="ques-space"></form>
+                </div>
                 <div class="col-md-2"></div>
             <!-- </form> -->
         </div>
