--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="assets/css/trivia.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>90's Music Trivia Game</h1>
+    </header>
     <div class="container">
         <div class="row">
             <div class="col-md-2"></div>
@@ -30,7 +34,7 @@
         <div class="row">
             <!-- <form> -->
                 <div class="col-md-2"></div>
-                <div class="col-xs-12 col-sm-12 col-md-8">
+                <div class="col-xs-12 col-sm-12 col-md-8 sub">
                     <form class="ques-space"></form>
                 </div>
                 <div class="col-md-2"></div>
@@ -38,8 +42,22 @@
         </div>
         <div class="row">
             <div class="col-md-2"></div>
-            <div class="col-xs-12 col-sm-12 col-md-8">
+            <div class="col-xs-12 col-sm-12 col-md-8 sub">
                 <button id="submit" class="btn btn-primary">Submit</button>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8 sub">
+                <button id="reset" class="btn btn-primary">Try Again</button>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8 sub">
+                <button id="lvl2" class="btn btn-primary">Try Level 2?</button>
             </div>
             <div class="col-md-2"></div>
         </div>
